adding java service tests